@@ -1,4 +1,5 @@
 Development
+	Fix fullscreen icon used in place of play icon, problem caused by symbolic icon fix (Issue #656)
 	Only update the database when we really want to change something, speeds things up on load
 	Keep code from infinitly looping if audio device is not found
 	Apply patch to compile with libgda4 or libgda5
